fixed card buttons on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -90,4 +90,12 @@ nav ul a:focus {
   nav ul li {
     margin: 10px;
   }
+  .links{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .links a:nth-of-type(1){
+    margin-bottom: 15px;
+  }
 }
